# san-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENCE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  feature_template.md
.github/workflows/: ai_sync-to-gitlab.yml  ci-cd.yml  pr-mattermost.yml  sync-to-gitlab.yml
app/: main.py
app/api/endpoints/: health.py
app/api/v1/: router.py
app/api/v1/endpoints/: analyze.py  card.py  quiz.py  recommend.py  search.py  til.py
app/chains/: til.py
app/core/: config.py  exceptions.py  logging.py
app/llms/: __init__.py  client.py  embeddings.py  openai.py  stub.py
app/prompts/: __init__.py  analyze.py  card.py  image.py  quiz.py  recommend.py  til.py
app/schemas/: analyze.py  card.py  common.py  quiz.py  recommend.py  search.py  til.py
app/services/: analyzer.py  card.py  preprocessor.py  quiz.py  recommend.py  til.py
app/utils/: url.py
docs/: ai-convention.md  api-spec.md  requests.http
scripts/: langchain_agent_example.py
tests/: test_analyze_endpoint.py  test_analyzer.py  test_card_endpoint.py  test_embedding_client.py  test_errors.py  test_llm_client.py  test_preprocessor.py  test_quiz_endpoint.py  test_recommend_endpoint.py  test_search_endpoint.py  test_til.py  test_til_endpoint.py
tests/fixtures/: test_url.txt
